  Version 3.12
    1. Fixed virtual_port so that it works properly with https protocol.
    2. Fixed documentation for upload_hook().

  Version 3.11
    1. Killed warning in CGI::Cookie about MOD_PERL_API_VERSION
    2. Fixed append() so that it works in function mode.
    3. Workaround for a bug that appears in Apache2 versions through 2.0.54 
       in which SCRIPT_NAME and PATH_INFO are incorrect if the additional path_info
       contains a double slash. This workaround will handle the common case of
       http://mysite.com/cgi-bin/log.cgi/http://www.some.other.site/args, but will
       not handle the uncommon case of a ScriptAlias directive that adds additional
       path information to the end of the translated URI.

  Version 3.10
    1. Added Apache2::RequestIO, which is necessary for mp2 interoperability.

  Version 3.09
    1. Fixed tabindex="0" when using CGI to create forms without a prior start_html
    2. Removed warning about non-numeric MOD_PERL_API_VERSION.

  Version 3.08
    1. update support for mod_perl 2.0.  versions prior to
       mod_perl 1.999_22 (2.0.0-RC5) are no longer supported.

  Version 3.07
    1. Fixed typo in mod_perl detection.

  Version 3.06

    1. Fixed bare call to script() in start_html
    2. Moved Fh::DESTROY out of autoloaded functions so as to avoid
       clobbering $@ when CGI functions are executed in an eval{}
       context.
    3. mod_perl 2.0 version detection patch in CGI::Cookie provided by
       Allen Day.
    4. autoEscape() flag is now respected when generating extra
       attributes.
    5. Tests for *tag start/end generation from Shlomi Fish.
    6. Support for can() method provided by Ron Savage.
    7. Fix for lang='' when outputting XHTML.
    8. Added support for chunked transfer encoding, as suggested by 
	Hakan Ardo
    9. Fixed clobbering of row and column headers in tableized radio
	and checkbox groups, as reported by Nicolas Thierry-Mieg.