@@ -1,6 +1,7 @@
   Version 3.12
     1. Fixed virtual_port so that it works properly with https protocol.
     2. Fixed documentation for upload_hook().
+    3. Added POSTDATA documentation.
 
   Version 3.11
     1. Killed warning in CGI::Cookie about MOD_PERL_API_VERSION
